fixed a problem with demo where the css overlapped with login

--- a/react-app/src/components/demo/demo.css
+++ b/react-app/src/components/demo/demo.css
@@ -8,7 +8,7 @@
     color:#20B2AA;
     font-size: 18px;
     grid-column: 10 / 11;
-    grid-row: 13 / 16;
+    grid-row: 14 / 15;
     text-align: left;
     font-size: 20px;
 }
